fix: weird spacing on image gallery slider page

--- a/src/components/ImageGallerySlider/imageGallerySlider.scss
+++ b/src/components/ImageGallerySlider/imageGallerySlider.scss
@@ -3,7 +3,6 @@
 
 .imageGallerySlider {
   &__container {
-    margin: 0 $mobile-side-spacing;
     display: flex;
     flex-direction: column;
   }
